...
    </dependencies>
    <scenes>
        <!--Listing-->
        <scene sceneID="l62-GP-36w">
            <objects>
                <navigationController title="Listing" id="GSb-sI-2Xe" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Market Listings" id="6qM-sK-tI5"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KxA-ce-e2j" userLabel="Listing">
                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="Cle-BX-YFp" kind="relationship" relationship="rootViewController" id="3DI-fT-CFf"/>
...
            </objects>
            <point key="canvasLocation" x="-1164" y="-354"/>
        </scene>
        <!--My Listing-->
        <scene sceneID="SGB-9q-EFD">
            <objects>
                <navigationController title="My Listing" id="zIc-Pm-AYs" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Listings" id="oGU-Cs-aSj"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="J3d-T0-4Ps">
                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="Zca-VJ-Fgq" kind="relationship" relationship="rootViewController" id="GTz-Vp-j8F"/>
...
            </objects>
            <point key="canvasLocation" x="-962.31884057971024" y="840.48913043478262"/>
        </scene>
        <!--My Profile-->
        <scene sceneID="VCD-IJ-naR">
            <objects>
                <viewController storyboardIdentifier="UserProfile" title="My Profile" id="JNv-jd-YkI" customClass="UserProfileViewController" customModule="learnios" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="UkZ-fD-16l">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgU-rK-VLh">
                                <rect key="frame" x="136" y="489" width="142" height="36"/>
...
                                <color key="textColor" red="1" green="0.99172634550000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="23o-7T-rzq">
                                <rect key="frame" x="172" y="533" width="70" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Log Out">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                            </button>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addProfile" translatesAutoresizingMaskIntoConstraints="NO" id="fUA-ZV-J0c">
                                <rect key="frame" x="115" y="83" width="185" height="185"/>
                                <constraints>
...
                        <connections>
                            <outlet property="dataSource" destination="Cle-BX-YFp" id="aZ6-tY-XaB"/>
                            <outlet property="delegate" destination="Cle-BX-YFp" id="Lfj-K3-Et4"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Market Listings" id="eqj-GV-AE3">
                        <barButtonItem key="rightBarButtonItem" title="CartButton" style="plain" id="aeB-eR-BbK" userLabel="CartButton">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="uKh-NR-3IJ">
                                <rect key="frame" x="302" y="7" width="92" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Cart"/>
                                <connections>
                                    <action selector="cartButtonTapped:" destination="Cle-BX-YFp" eventType="touchUpInside" id="gem-yF-bqL"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="My Listings" id="g8M-CJ-GNk">
                        <barButtonItem key="rightBarButtonItem" style="plain" id="zWw-KL-Rim">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ujw-0E-yko">
                                <rect key="frame" x="311" y="7" width="83" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="New"/>
                            </button>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="collectionView" destination="iRs-Q7-6dI" id="k2z-dA-YPH"/>
                        <outlet property="newPostingButton" destination="ujw-0E-yko" id="SsS-e3-T5s"/>
...
