...
        return result
    }
    
    // instantiate components in the input container : name textbox
    let nameTextField: UITextField = {
        let tf = UITextField()
        tf.placeholder = "Name: John Dough"
        tf.translatesAutoresizingMaskIntoConstraints = false
        return tf
    }()
    // instantiate components in the input container : separator
    let nameSeparatorView: UIView = {
        let view = UIView()
...
        view.translatesAutoresizingMaskIntoConstraints = false
        return view
    }()
    // instantiate components in the input container : email textbox
    let emailTextField: UITextField = {
        let tf = UITextField()
        tf.placeholder = "Email Address: jd2920@columbia.edu"
        tf.translatesAutoresizingMaskIntoConstraints = false
        return tf
    }()
    // instantiate components in the input container : separator
    let emailSeparatorView: UIView = {
        let view = UIView()
...
        view.translatesAutoresizingMaskIntoConstraints = false
        return view
    }()
    // instantiate components in the input container : password textbox
    let passwordTextField: UITextField = {
        let tf = UITextField()
        tf.placeholder = "Password"
        tf.translatesAutoresizingMaskIntoConstraints = false
        tf.isSecureTextEntry = true
        return tf
    }()
    
    // "let" is substituted by "lazy var" for access to using "self" in addGestureRecognizer
...
        
        return logoView
    }()
    
    // switch between login and register
    lazy var loginRegisterSegmentedControl: UISegmentedControl = {
        let sc = UISegmentedControl(items: ["Login", "Register"])
        let titleTextAttributes = [kCTForegroundColorAttributeName: UIColor.black]
        sc.setTitleTextAttributes(titleTextAttributes, for: .selected)
        sc.translatesAutoresizingMaskIntoConstraints = false
        sc.tintColor = UIColor.red
        sc.backgroundColor = UIColor.white
        sc.selectedSegmentIndex = 0
...
