...
        
        present(alertController, animated: true, completion: nil)
    }
    
    func showPhotoActionSheet() {
        let optionMenu = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        let LibraryAction = UIAlertAction(title: "Use Existing", style: UIAlertActionStyle.default, handler: goToLibrary)
        let CameraAction = UIAlertAction(title: "Take Photo", style: UIAlertActionStyle.default, handler: takePhoto)
        let CancelAction = UIAlertAction(title: "Cancel", style: UIAlertActionStyle.cancel)
        optionMenu.addAction(LibraryAction)
        optionMenu.addAction(CameraAction)
        optionMenu.addAction(CancelAction)
        self.present(optionMenu, animated: true, completion: nil)
...
